--- a/metric.yml
+++ b/metric.yml
@@ -6,14 +6,14 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     networks:
-      ryan_gitops-network
+      - ryan_gitops-network
   
   grafana:
     image: grafana/grafana:latest
     ports:
       - "3000:3000"
     networks:
-      ryan_gitops-network
+      - ryan_gitops-network
 
 networks:
   ryan_gitops-network:
