--- a/metric.yml
+++ b/metric.yml
@@ -5,6 +5,8 @@ services:
         - prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - "9090:9090"
     networks:
       - ryan_gitops-network
   
