--- a/metric.yml
+++ b/metric.yml
@@ -2,7 +2,7 @@ services:
   prometheus:
     image: prom/prometheus:latest
     volumes:
-        - prometheus.yml:/etc/prometheus/prometheus.yml
+        - ./prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
